# monitoring-guide

./: .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
evals/: judge.py  metrics.py  run_evals.py
evals/dataset/: questions.json
evals/results/: latest.json
src/monitoring_guide/: __init__.py  api.py  chunking.py  cli.py  client.py  config.py  corpus.py  embedder.py  ingest.py  models.py  prompts.py  rag.py  store.py
src/monitoring_guide/data/guidance/: high_risk_drugs.md  long_term_conditions.md
tests/: conftest.py  test_core.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  samples.ts  types.ts
